# jenkinsexampleCmake

./: Jenkinsfile  Jenkinsfile1
test/: CMakeLists.txt
